--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
     <title>Tic Tac Toe</title>
   </head>
   <body>
-    <div class="board x" id="board">
-      <div class="cell x" data-cell></div>
-      <div class="cell circle" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-      <div class="cell" data-cell></div>
-    </div>
-    <div class="winning-message" id="winningMessage">
-      <div class="data-winning-message-text"></div>
-      <button id="restartButton">Restart</button>
-    </div>
+    <header>
+      <h1><span class="site-title">Tic Tac Toe</span></h1>
+    </header>
+    <main>
+      <div class="board" id="board">
+        <div class="cell" data-cell data-index="0"></div>
+        <div class="cell" data-cell data-index="1"></div>
+        <div class="cell" data-cell data-index="2"></div>
+        <div class="cell" data-cell data-index="3"></div>
+        <div class="cell" data-cell data-index="4"></div>
+        <div class="cell" data-cell data-index="5"></div>
+        <div class="cell" data-cell data-index="6"></div>
+        <div class="cell" data-cell data-index="7"></div>
+        <div class="cell" data-cell data-index="8"></div>
+      </div>
+      <div class="winning-message" id="winningMessage">
+        <div class="data-winning-message-text"></div>
+        <button id="restartButton">Restart</button>
+      </div>
+    </main>
+    <footer>Copyright © 2023 Dustin Yochim</footer>
   </body>
 </html>
