Add function for handling wins

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <button id="restartButton">Restart</button>
       </div>
     </main>
-    <footer>Copyright © 2023 Dustin Yochim</footer>
+    <footer>
+      <a href="https://github.com/DustinYochim">
+        Copyright © 2023 Dustin Yochim
+        <img src="./github-mark.svg" alt="GitHub Logo" />
+      </a>
+    </footer>
   </body>
 </html>
