--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js" defer></script>
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="./reset.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./style.css"
+    />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.ico"
+    />
+    <script
+      src="./script.js"
+      defer
+    ></script>
     <title>Tic Tac Toe</title>
   </head>
   <body>
@@ -14,18 +34,60 @@
       <h1><span class="site-title">Tic Tac Toe</span></h1>
     </header>
     <main>
-      <div class="board" id="board">
-        <div class="cell" data-cell data-index="0"></div>
-        <div class="cell" data-cell data-index="1"></div>
-        <div class="cell" data-cell data-index="2"></div>
-        <div class="cell" data-cell data-index="3"></div>
-        <div class="cell" data-cell data-index="4"></div>
-        <div class="cell" data-cell data-index="5"></div>
-        <div class="cell" data-cell data-index="6"></div>
-        <div class="cell" data-cell data-index="7"></div>
-        <div class="cell" data-cell data-index="8"></div>
+      <div
+        class="board"
+        id="board"
+      >
+        <div
+          class="cell"
+          data-cell
+          data-index="0"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="1"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="2"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="3"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="4"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="5"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="6"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="7"
+        ></div>
+        <div
+          class="cell"
+          data-cell
+          data-index="8"
+        ></div>
       </div>
-      <div class="winning-message" id="winningMessage">
+      <div
+        class="winning-message"
+        id="winningMessage"
+      >
         <div class="data-winning-message-text"></div>
         <button id="restartButton">Restart</button>
       </div>
@@ -33,7 +95,10 @@
     <footer>
       <a href="https://github.com/DustinYochim">
         Copyright © 2023 Dustin Yochim
-        <img src="./github-mark.svg" alt="GitHub Logo" />
+        <img
+          src="./github-mark.svg"
+          alt="GitHub Logo"
+        />
       </a>
     </footer>
   </body>
